chore: Add headless mode support to API server
